--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.0.28",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "vue": "^3.2.41",
+    "vue-i18n": "^9.3.0-beta.12",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
